[package]
name = "signal-native"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Native Node.js Signal client — baileys for Signal. Rust (Presage) + napi-rs bindings."
repository = "https://github.com/milady-ai/signal-native"

[lib]
crate-type = ["cdylib"]

[dependencies]
presage = { git = "https://github.com/whisperfish/presage", rev = "fe3ed54" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "fe3ed54" }
napi = { version = "2", default-features = false, features = ["napi9", "async", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
hex = "0.4"
futures = "0.3"
once_cell = "1"

[build-dependencies]
napi-build = "2"

[patch.crates-io]
# Required by presage-store-sqlite for bundled-sqlcipher-custom-crypto feature
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc" }
# Required by libsignal
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

[profile.release]
lto = true
strip = "symbols"
